--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.js",
   "dependencies": {
     "lodash": "4.17.10",
+    "ramda": "0.25.0",
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "react-scripts": "1.1.4"
